--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@
                 <h2 class="h2-web">Чем мы занимаемся</h2>
                 <ul class="about-list list-no-style ">
                     <li class="about-list__item">
-                        <img src="./images/about1.jpg" alt="picture about us" width="370" height="294">
+                        <img srcset="./images/about1.jpg 1x, ./images/about1@2x.jpg 2x" src="./images/about1.jpg" alt="picture about us" width="370" height="294">
                         <div class="about-description">
                             ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ
                         </div>
                     </li>
                     <li class="about-list__item">
-                        <img src="./images/about2.jpg" alt="picture about us" width="370" height="294">
+                        <img srcset="./images/about2.jpg 1x, ./images/about2@2x.jpg 2x" src="./images/about2.jpg" alt="picture about us" width="370" height="294">
                         <div class="about-description">
                             МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ
                         </div>
                     </li>
                     <li class="about-list__item">
-                        <img src="./images/about3.jpg" alt="picture about us" width="370" height="294">
+                        <img srcset="./images/about3.jpg 1x, ./images/about3@2x.jpg 2x" src="./images/about3.jpg" alt="picture about us" width="370" height="294">
                         <div class="about-description">
                             ДИЗАЙНЕРСКИЕ РЕШЕНИЯ
                         </div>
@@ -224,7 +224,7 @@
                 <h2 class="h2-web">Наша команда</h2>
                 <ul class="names list-no-style ">
                     <li class="names-item">
-                        <img src="./images/team1igor.jpg" alt="Игорь Демьяненко Product Designer" width="270" height="260">
+                        <img srcset="./images/team1igor.jpg 1x, ./images/team1igor@2x.jpg 2x" src="./images/team1igor.jpg" alt="Игорь Демьяненко Product Designer" width="270" height="260">
                         <div class="profession">
                             <h3>Игорь Демьяненко</h3>
                             <p>Product Designer</p>
@@ -253,7 +253,7 @@
                         </div>
                     </li>
                     <li class="names-item">
-                        <img src="./images/team2olga.jpg" alt="Ольга Репина Frontend Developer" width="270" height="260">
+                        <img srcset="./images/team2olga.jpg 1x, ./images/team2olga@2x.jpg 2x" src="./images/team2olga.jpg" alt="Ольга Репина Frontend Developer" width="270" height="260">
                         <div class="profession">
                             <h3>Ольга Репина</h3>
                             <p>Frontend Developer</p>
@@ -282,7 +282,7 @@
                         </div>
                     </li>
                     <li class="names-item">
-                        <img src="./images/team3nikolai.jpg" alt="Николай Тарасов Marketing" width="270" height="260">
+                        <img srcset="./images/team3nikolai.jpg 1x, ./images/team3nikolai@2x.jpg 2x" src="./images/team3nikolai.jpg" alt="Николай Тарасов Marketing" width="270" height="260">
                         <div class="profession">
                             <h3>Николай Тарасов</h3>
                             <p>Marketing</p>
@@ -311,7 +311,7 @@
                         </div>
                     </li>
                     <li class="names-item">
-                        <img src="./images/team4michail.jpg" alt="Михаил Ермаков UI Designer" width="270" height="260">
+                        <img srcset="./images/team4michail.jpg 1x, ./images/team4michail@2x.jpg 2x" src="./images/team4michail.jpg" alt="Михаил Ермаков UI Designer" width="270" height="260">
                         <div class="profession">
                             <h3>Михаил Ермаков</h3>
                             <p>UI Designer</p>
