--- a/portfolio.html
+++ b/portfolio.html
@@ -12,28 +12,64 @@
 </head>
 <body>
 
+<!-- MOBILE -->
+<div class="mobile">
+    <a href="#" class="logo"><span>Web</span>Studio</a>
+
+    <button type="button" class="burger is-open" data-menu-button aria-controls="mobile-navigation">
+        <svg width="24px" height="16px" aria-label="Переключатель мобильного меню">
+            <use class="burger-open" href="./images/icons.svg#burger-open"></use>
+            <use class="burger-close" href="./images/icons.svg#burger-close"></use>
+        </svg>
+    </button>
+    
+    <div class="mobile-container" id="mobile-navigation" data-menu>
+        <ul class="mobile-menu list-no-style">
+            <li class="mobile-menu__item studio"><a href="./index.html">Студия</a></li>
+            <li class="mobile-menu__item"><a href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-menu__item"><a href="#">Контакты</a></li>
+        </ul>
+        <div class="mobile-container__bottom">
+            <a class="mobile-address__phone" href="tel:+380961111111">
+                +38 096 111 11 11</a>
+            <a class="mobile-address__mail" href="mailto:info@devstudio.com">
+                info@devstudio.com</a>
+
+            <ul class="mobile-social list-no-style">
+                <li class="mobile-social__item"><a href="#" class="mobile-social__link" aria-label="инстаграм">Instagram</a></li>
+                <li class="mobile-social__item"><a href="#" class="mobile-social__link" aria-label="твиттер">Twitter</a></li>
+                <li class="mobile-social__item"><a href="#" class="mobile-social__link" aria-label="фейсбук">Facebook</a></li>
+                <li class="mobile-social__item"><a href="#" class="mobile-social__link" aria-label="линкед-ин">LinkedIn</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!-- /MOBILE -->
+
+<!-- HEADER -->
     <header class="header">
         <div class="container">
-            <nav class="navig">
-                <a href="#" class="logo"><span>Web</span>Studio</a>
-                <ul class="navig-menu list-no-style">
-                    <li class="navig-menu__item"><a href="./index.html">Студия</a></li>
-                    <li class="navig-menu__item portfolio"><a href="./portfolio.html">Портфолио</a></li>
-                    <li class="navig-menu__item"><a href="#">Контакты</a></li>
+            <a href="#" class="logo"><span>Web</span>Studio</a>
+                <nav class="navig">
+                    <ul class="navig-menu list-no-style">
+                        <li class="navig-menu__item"><a href="./index.html">Студия</a></li>
+                        <li class="navig-menu__item portfolio"><a href="./portfolio.html">Портфолио</a></li>
+                        <li class="navig-menu__item"><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+
+                <ul class="navig-address list-no-style ">
+                    <li class="navig-address__item"><a class="address-link" href="mailto:info@devstudio.com">
+                        <svg class="address-mail">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com</a></li>
+                    <li class="navig-address__item"><a class="address-link" href="tel:+380961111111">
+                        <svg class="address-phone">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a></li>
                 </ul>
-            </nav>
-            <ul class="navig-address list-no-style ">
-                <li class="navig-address__item"><a class="address-link" href="mailto:info@devstudio.com">
-                    <svg class="address-mail">
-                        <use href="./images/icons.svg#icon-envelope"></use>
-                    </svg>
-                    info@devstudio.com</a></li>
-                <li class="navig-address__item"><a class="address-link" href="tel:+380961111111">
-                    <svg class="address-phone">
-                        <use href="./images/icons.svg#icon-smartphone"></use>
-                    </svg>
-                    +38 096 111 11 11</a></li>
-            </ul>
         </div>   
     </header>
 
@@ -53,7 +89,7 @@
                 <ul class="list-no-style projects-list">
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p1-technokryak.jpg" alt="technokryak" width="370" height="294">
+                            <img srcset="./images/portfolio/p1technokryak.jpg 1x, ./images/portfolio/p1technokryak@2x.jpg 2x" src="./images/portfolio/p1technokryak.jpg" alt="technokryak" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -67,7 +103,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p2-neworlean.jpg" alt="poster new orlean" width="370" height="294">
+                            <img srcset="./images/portfolio/p2neworlean.jpg 1x, ./images/portfolio/p2neworlean@2x.jpg 2x" src="./images/portfolio/p2neworlean.jpg" alt="poster new orlean" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -81,7 +117,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p3-seafood.jpg" alt="seafood" width="370" height="294">
+                            <img srcset="./images/portfolio/p3seafood.jpg 1x, ./images/portfolio/p3seafood@2x.jpg 2x" src="./images/portfolio/p3seafood.jpg" alt="seafood" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -95,7 +131,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p4-prime.jpg" alt="project prime" width="370" height="294">
+                            <img srcset="./images/portfolio/p4prime.jpg 1x, ./images/portfolio/p4prime@2x.jpg 2x" src="./images/portfolio/p4prime.jpg" alt="project prime" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -109,7 +145,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p5-boxes.jpg" alt="project boxes" width="370" height="294">
+                            <img srcset="./images/portfolio/p5boxes.jpg 1x, ./images/portfolio/p5boxes@2x.jpg 2x" src="./images/portfolio/p5boxes.jpg" alt="project boxes" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -123,7 +159,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p6-inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <img srcset="./images/portfolio/p6inspiration.jpg 1x, ./images/portfolio/p6inspiration@2x.jpg 2x" src="./images/portfolio/p6inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -137,7 +173,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p7-limited.jpg" alt="Limited Edition" width="370" height="294">
+                            <img srcset="./images/portfolio/p7limited.jpg 1x, ./images/portfolio/p7limited@2x.jpg 2x" src="./images/portfolio/p7limited.jpg" alt="Limited Edition" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -151,7 +187,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p8-lab.jpg" alt="project lab" width="370" height="294">
+                            <img srcset="./images/portfolio/p8lab.jpg 1x, ./images/portfolio/p8lab@2x.jpg 2x" src="./images/portfolio/p8lab.jpg" alt="project lab" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -166,7 +202,7 @@
                     </li>
                     <li class="projects-item">
                         <div class="projects-item__thumb">
-                            <img src="./images/portfolio/p9-growing.jpg" alt="growing business" width="370" height="294">
+                            <img srcset="./images/portfolio/p9growing.jpg 1x, ./images/portfolio/p9growing@2x.jpg 2x" src="./images/portfolio/p9growing.jpg" alt="growing business" width="370" height="294">
                             <div class="projects-overlay">
                                 <p class="overlay-text">
                                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -190,7 +226,7 @@
                 <a href="#" class="logo logo-footer"><span>Web</span>Studio</a>
                 <address>
                     <p>г. Киев, пр-т Леси Украинки, 26</p>
-                    <ul class="list-no-style ">
+                    <ul class="address-footer list-no-style ">
                         <li class="address-footer__item"><a href="mailto:info@example.com">info@example.com</a></li>
                         <li class="address-footer__item"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
                     </ul>
@@ -235,5 +271,7 @@
             </form>
         </div>
     </footer>
+
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
