--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <h2 class="h2-web">Наша команда</h2>
                 <ul class="names list-no-style ">
                     <li class="names-item">
-                        <img srcset="./images/team1igor.jpg 1x, ./images/team1igor@2x.jpg 2x" src="./images/team1igor.jpg" alt="Игорь Демьяненко Product Designer" width="270" height="260">
+                        <img srcset="./images/team1igor.jpg 1x, ./images/team1igor@2x.jpg 2x" src="./images/team1igor.jpg" alt="Игорь Демьяненко Product Designer" >
                         <div class="profession">
                             <h3>Игорь Демьяненко</h3>
                             <p>Product Designer</p>
